Fixed unavailable issue for Currency Converter